--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h1>Bienvenue sur mon portfolio</h1>
         <p>Je suis Axel Marion, développeur web, designer.</p>
         <a href="portfolio.html" class="btn">Voir mon Portfolio</a>
-        <a href="CV.html" class="btn">Voir mon CV</a>
+        <a href="cv.html" class="btn">Voir mon CV</a>
     </div>
 </body>
 </html>
